# modelopt-fast-moe

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: bench_calibration.py  benchmark_expert_cal.py
examples/: quantize_supergemma4.py
src/modelopt_fast_moe/: __init__.py  adaptive_bs.py
tests/: test_adaptive_bs.py
